<resources>
    <string name="app_name">AMovies</string>
    <string name="tab_title_1">Movies</string>
    <string name="tab_title_2">TV Shows</string>
    <string name="tab_title_3">Favorites</string>

    <string name="tab_title_movies">Movies</string>
    <string name="tab_title_tv">Tv Shows</string>

    <string name="image_poster_desc">Image Poster</string>
    <string name="overview">Overview</string>
    <string name="year">(%s)</string>
    <string name="image_preview_desc">Image Preview</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="credit">Credit by : Mohammad Arafat Maku</string>
    <string name="score">User Score</string>
    <string name="trailer">Trailer</string>
    <string name="rating">%s%%</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="searching">Searching</string>
    <string name="search_desc">Now you can search almost every Movies and Tv Shows by Click Search menu at Top</string>
    <string name="empty">DATA NOT FOUND</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="set_favorit">Set Favorit</string>
    <string name="best_rating">Best Rating</string>
    <string name="random">Random</string>
    <string name="name">Name</string>
</resources>