<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bg_black"
        app:layout_constraintBottom_toTopOf="@id/bottom_navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:elevation="5dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/prim"
            app:bt_colorInactive="@color/grey"
            app:bt_icon="@drawable/ic_movies"
            app:bt_shape="@drawable/bottom_nav_bg_stroke"
            app:bt_title="@string/tab_title_1" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_tv_shows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/prim"
            app:bt_colorInactive="@color/grey"
            app:bt_icon="@drawable/ic_tv_show"
            app:bt_shape="@drawable/bottom_nav_bg_stroke"
            app:bt_title="@string/tab_title_2" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/prim"
            app:bt_colorInactive="@color/grey"
            app:bt_icon="@drawable/ic_favorite"
            app:bt_shape="@drawable/bottom_nav_bg_stroke"
            app:bt_title="@string/tab_title_3" />

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</androidx.constraintlayout.widget.ConstraintLayout>